--- a/index.html
+++ b/index.html
@@ -367,8 +367,7 @@
                         <li>Comprehensive exception handling & validation</li>
                     </ul>
                     <div class="project-links">
-                        <a href="https://github.com/Mohamed-Mossa" target="_blank">View Code</a>
-                        <a href="https://github.com/Mohamed-Mossa" target="_blank">Documentation</a>
+                        <a href="https://github.com/Mohamed-Mossa/Authuntication-in-Java-Springboot" target="_blank">View Code</a>
                     </div>
                 </div>
 
@@ -387,8 +386,7 @@
                     </ul>
                     <p style="margin-top: 15px;"><strong>Impact:</strong> Eliminated manual data entry, saved 2 hours daily for finance team</p>
                     <div class="project-links">
-                        <a href="https://github.com/Mohamed-Mossa" target="_blank">View Code</a>
-                        <a href="https://github.com/Mohamed-Mossa" target="_blank">Documentation</a>
+                        <a href="https://github.com/Mohamed-Mossa/Scraping-Exchange-rates" target="_blank">View Code</a>
                     </div>
                 </div>
 
@@ -406,28 +404,9 @@
                         <li>Excel upload feature for bulk imports</li>
                     </ul>
                     <p style="margin-top: 15px;"><strong>Impact:</strong> Reduced month-end closing time by 40%</p>
-                    <div class="project-links">
-                        <a href="https://github.com/Mohamed-Mossa" target="_blank">View Code</a>
-                    </div>
                 </div>
 
-                <div class="project-card">
-                    <h3>🏥 Medical Diagnosis System</h3>
-                    <p class="tech-stack">FastAPI • Streamlit • Docker • Machine Learning</p>
-                    <p><strong>Graduation Project (A+):</strong> Full-stack medical diagnosis application with predictive models for multiple diseases.</p>
-                    <p style="margin-top: 15px;"><strong>Key Features:</strong></p>
-                    <ul>
-                        <li>FastAPI backend with multiple ML models</li>
-                        <li>Streamlit frontend for real-time diagnosis</li>
-                        <li>Docker containerization for deployment</li>
-                        <li>REST API for model predictions</li>
-                        <li>Deployed on Heroku</li>
-                    </ul>
-                    <div class="project-links">
-                        <a href="https://github.com/Mohamed-Mossa" target="_blank">View Code</a>
-                        <a href="https://github.com/Mohamed-Mossa" target="_blank">Live Demo</a>
-                    </div>
-                </div>
+              
             </div>
         </div>
     </section>
